--- a/api/ecommerce/app/templates/app/home.html
+++ b/api/ecommerce/app/templates/app/home.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Welcome to Ecommerce</h1>
-    <a href="{% url 'app:product_list' %}">View Products</a>
+    <a href="{% url 'app:product_list' %}">View Products list</a>
 </body>
 </html>
